--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <!-- Navbar start-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
         <div class="container-fluid mx-5">
-          <a class="navbar-brand font-monospace" href="#">Wildan.</a>
+          <a class="navbar-brand font-monospace" href="index.html">Wildan.</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
     
           <div class="poppins collapse navbar-collapse justify-content-center" id="navbarsExample04">
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-white ">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-secondary">About</a></li>
+                <li><a href="index.html" class="nav-link px-2 text-white ">Home</a></li>
+                <li><a href="about.html" class="nav-link px-2 text-secondary">About</a></li>
               </ul>
           </div>
           <div class="text-end poppins">
-            <button type="button" class="btn btn-warning">Contact</button>
+            <a href="contact.html" ><button type="button" class="btn btn-warning">Contact</button></a>
         </div>
       </nav>
       <!-- Navbar end-->
